@@ -91,6 +91,7 @@ Version CVS HEAD (?)
   * Region Chooser: Double click opens dimension manager dialog.
   * Dimension Manager: Clicking on dimension type cell of an existing dimension
     opens a popup to alter the dimension type.
+  * Script Tree: Double click opens script editor.
 
 Version 0.2.0 (2009-07-31)
 
